# pCalmd-AI

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/pcalmd/: __main__.py  cli.py  config.py  pipeline.py
src/pcalmd/ai/: __init__.py  prompts.py  provider.py  rate_limiter.py
src/pcalmd/bridge/: __init__.py  node_bridge.py  package-lock.json  package.json  worker.js
src/pcalmd/chunking/: __init__.py  chunker.py  context.py
src/pcalmd/output/: __init__.py  writer.py
src/pcalmd/parser/: __init__.py  ast_types.py  js_parser.py
src/pcalmd/transforms/: __init__.py  base.py  comment.py  explain.py  rename.py  simplify.py
src/pcalmd/verification/: __init__.py  ast_verify.py  rename_map.py
tests/: conftest.py  test_bridge.py  test_chunker.py  test_parser.py  test_pipeline.py  test_transforms.py  test_verification.py
tests/fixtures/: simple_obfuscated.js
